--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,23 +9,36 @@ set(LIBRARIES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libraries)
 include(${LIBRARIES_PATH}/imgui/import.cmake)
 
 include_directories(
-	${LIBRARIES_PATH}/glad/include
-	${LIBRARIES_PATH}/stb/include
-	${LIBRARIES_PATH}/plog/include
-	${LIBRARIES_PATH}/glfw/include
-	${LIBRARIES_PATH}/glm/include
-	${LIBRARIES_PATH}/imgui
-	${PROJECT_SOURCE_DIR}/src
-    ${PROJECT_SOURCE_DIR}/include
+	"${LIBRARIES_PATH}/glad/include"
+	"${LIBRARIES_PATH}/stb/include"
+	"${LIBRARIES_PATH}/plog/include"
+	"${LIBRARIES_PATH}/glfw/include"
+	"${LIBRARIES_PATH}/glm/include"
+	"${LIBRARIES_PATH}/imgui"
+	"${PROJECT_SOURCE_DIR}/src"
+    "${PROJECT_SOURCE_DIR}/include"
+	"${PROJECT_SOURCE_DIR}/src/engine"
+    "${PROJECT_SOURCE_DIR}/include/engine"
 )
 
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/libraries/glfw/lib-vc2022)
+link_directories("${CMAKE_CURRENT_SOURCE_DIR}/libraries/glfw/lib-vc2022")
 
-file(GLOB SRCS
-        "${PROJECT_SOURCE_DIR}/include/*.h"
-        "${PROJECT_SOURCE_DIR}/src/*.cpp"
+set(ENGINE_SRCS
+	"include/engine/Camera.h" "src/engine/Camera.cpp"
+	"include/engine/File.h" "src/engine/File.cpp"
+	"include/engine/Shader.h" "src/engine/Shader.cpp"
+	"include/engine/Texture.h" "src/engine/Texture.cpp"
+	"include/engine/Window.h" "src/engine/Window.cpp"
 )
 
-add_executable (${PROJECT_NAME} ${SRCS} ${IMGUI_SOURCES} "${LIBRARIES_PATH}/glad/src/glad.c")
+set(PROJECT_SRCS
+        "include/Block.h" "src/Block.cpp"
+		"include/BlockManager.h" "src/BlockManager.cpp"
+		"include/HUD.h" "src/HUD.cpp"
+		"include/main.h" "src/main.cpp"
+		"include/RenderPipeline.h" "src/RenderPipeline.cpp"
+)
 
-target_link_libraries(${PROJECT_NAME} glfw3 opengl32 gdi32)
+add_executable (${PROJECT_NAME} ${ENGINE_SRCS} ${PROJECT_SRCS} ${IMGUI_SOURCES} "${LIBRARIES_PATH}/glad/src/glad.c")
+
+target_link_libraries(${PROJECT_NAME} "glfw3" "opengl32" "gdi32")
