Small fixes and improvements
Added icon
Changed internal engine arch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 project ("LogicalSystem")
 
 add_definitions(-DBLOCK_BATCHING=2048)
+add_definitions(-DGLFW_INCLUDE_NONE)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
@@ -23,22 +24,14 @@ include_directories(
 
 link_directories("${CMAKE_CURRENT_SOURCE_DIR}/libraries/glfw/lib-vc2022")
 
-set(ENGINE_SRCS
-	"include/engine/Camera.h" "src/engine/Camera.cpp"
-	"include/engine/File.h" "src/engine/File.cpp"
-	"include/engine/Shader.h" "src/engine/Shader.cpp"
-	"include/engine/Texture.h" "src/engine/Texture.cpp"
-	"include/engine/Window.h" "src/engine/Window.cpp"
+file(GLOB ENGINE_SRCS
+	"include/engine/*.h" "src/engine/*.cpp" 
 )
 
-set(PROJECT_SRCS
-        "include/Block.h" "src/Block.cpp"
-		"include/BlockManager.h" "src/BlockManager.cpp"
-		"include/HUD.h" "src/HUD.cpp"
-		"include/main.h" "src/main.cpp"
-		"include/RenderPipeline.h" "src/RenderPipeline.cpp"
+file(GLOB PROJECT_SRCS
+       "include/*.h" "src/*.cpp"
 )
 
-add_executable (${PROJECT_NAME} ${ENGINE_SRCS} ${PROJECT_SRCS} ${IMGUI_SOURCES} "${LIBRARIES_PATH}/glad/src/glad.c")
+add_executable (${PROJECT_NAME} ${ENGINE_SRCS} ${PROJECT_SRCS} ${IMGUI_SOURCES} "${LIBRARIES_PATH}/glad/src/glad.c" "${LIBRARIES_PATH}/stb/include/stb_image.h")
 
 target_link_libraries(${PROJECT_NAME} "glfw3" "opengl32" "gdi32")
