--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-﻿cmake_minimum_required (VERSION 3.23)
-project ("LogicalSystem")
+﻿cmake_minimum_required(VERSION 3.23)
+project("LogicalSystem")
 
 add_definitions(-DBLOCK_BATCHING=2048)
 
@@ -7,35 +7,36 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 set(LIBRARIES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libraries)
 include(${LIBRARIES_PATH}/imgui/import.cmake)
+set(GLAD_PATH "${LIBRARIES_PATH}/glad/release")
 
 include_directories(
-	"${LIBRARIES_PATH}/glad/include"
-	"${LIBRARIES_PATH}/stb/include"
-	"${LIBRARIES_PATH}/plog/include"
-	"${LIBRARIES_PATH}/glfw/include"
-	"${LIBRARIES_PATH}/glm/include"
-	"${LIBRARIES_PATH}/imgui"
-    "${PROJECT_SOURCE_DIR}/include"
-    "${PROJECT_SOURCE_DIR}/engine/include"
+        "${GLAD_PATH}/include"
+        "${LIBRARIES_PATH}/stb/include"
+        "${LIBRARIES_PATH}/plog/include"
+        "${LIBRARIES_PATH}/glfw/include"
+        "${LIBRARIES_PATH}/glm/include"
+        "${LIBRARIES_PATH}/imgui"
+        "${PROJECT_SOURCE_DIR}/include"
+        "${PROJECT_SOURCE_DIR}/engine/include"
 )
 
 link_directories("${LIBRARIES_PATH}/glfw/lib-vc2022")
 
 file(GLOB ENGINE_SRCS
-	"engine/include/*.h" "engine/src/*.cpp" 
-)
+        "engine/include/*.h" "engine/src/*.cpp"
+        )
 
 file(GLOB PROJECT_SRCS
-      "include/*.h" "src/*.cpp"
-)
+        "include/*.h" "src/*.cpp"
+        )
 
 set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/appicon.rc")
 
-add_executable (${PROJECT_NAME} ${ENGINE_SRCS} ${PROJECT_SRCS} ${IMGUI_SOURCES} "${LIBRARIES_PATH}/glad/src/glad.c" ${APP_ICON_RESOURCE_WINDOWS})
+add_executable(${PROJECT_NAME} ${ENGINE_SRCS} ${PROJECT_SRCS} ${IMGUI_SOURCES} "${GLAD_PATH}/src/glad.c" ${APP_ICON_RESOURCE_WINDOWS})
 
-IF(CMAKE_BUILD_TYPE STREQUAL "Release")
-	set_target_properties(${PROJECT_NAME} PROPERTIES 
-		LINK_FLAGS "/ENTRY:mainCRTStartup /SUBSYSTEM:WINDOWS")
-endif()
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+    set_target_properties(${PROJECT_NAME} PROPERTIES
+            LINK_FLAGS "/ENTRY:mainCRTStartup /SUBSYSTEM:WINDOWS")
+endif ()
 
-target_link_libraries(${PROJECT_NAME} "glfw3" "opengl32" "gdi32")
+target_link_libraries(${PROJECT_NAME} "glfw3" "opengl32")
