--- a/resources.rc
+++ b/resources.rc
@@ -12,6 +12,8 @@ data/shaders/final.vert RCDATA "data/shaders/final.vert"
 data/shaders/final.frag RCDATA "data/shaders/final.frag"
 data/shaders/selection.vert RCDATA "data/shaders/selection.vert"
 data/shaders/selection.frag RCDATA "data/shaders/selection.frag"
+data/shaders/glow.vert RCDATA "data/shaders/glow.vert"
+data/shaders/glow.frag RCDATA "data/shaders/glow.frag"
 
 data/examples/Adder4Bit.ls RCDATA "data/examples/Adder4Bit.ls"
 data/examples/Blocks.ls RCDATA "data/examples/Blocks.ls"
