--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(
         "${LIBRARIES_PATH}/glfw/include"
         "${LIBRARIES_PATH}/glm/include"
         "${LIBRARIES_PATH}/zlib"
+        "${LIBRARIES_PATH}/freetype/include"
         "${LIBRARIES_PATH}/bson"
         "${LIBRARIES_PATH}/imgui"
         "${PROJECT_SOURCE_DIR}/include"
@@ -25,6 +26,7 @@ include_directories(
 link_directories("${LIBRARIES_PATH}/glfw/lib-vc2022")
 link_directories("${LIBRARIES_PATH}/zlib/lib")
 link_directories("${LIBRARIES_PATH}/engine/lib")
+link_directories("${LIBRARIES_PATH}/freetype/lib")
 
 file(GLOB PROJECT_SRCS
         "include/*.h" "src/*.cpp"
