--- a/resources.rc
+++ b/resources.rc
@@ -10,8 +10,8 @@ data/shaders/blur.vert RCDATA "data/shaders/blur.vert"
 data/shaders/blur.frag RCDATA "data/shaders/blur.frag"
 data/shaders/final.vert RCDATA "data/shaders/final.vert"
 data/shaders/final.frag RCDATA "data/shaders/final.frag"
-data/shaders/selection.vert RCDATA "data/shaders/selection.vert"
-data/shaders/selection.frag RCDATA "data/shaders/selection.frag"
+data/shaders/quad.vert RCDATA "data/shaders/quad.vert"
+data/shaders/quad.frag RCDATA "data/shaders/quad.frag"
 data/shaders/glow.vert RCDATA "data/shaders/glow.vert"
 data/shaders/glow.frag RCDATA "data/shaders/glow.frag"
 
