Font rendering test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,6 @@
 project("LogicalSystem")
 
 add_definitions(-DBLOCK_BATCHING=2048)
-add_definitions(-DFILE_RESOURCES=true)
 
 set(CMAKE_CXX_STANDARD 20)
 set(LIBRARIES_PATH "E:/Projects/libraries")
@@ -14,6 +13,7 @@ include_directories(
         "${LIBRARIES_PATH}/stb/include"
         "${LIBRARIES_PATH}/b64"
         "${LIBRARIES_PATH}/plog/include"
+        "${LIBRARIES_PATH}/freetype/include"
         "${LIBRARIES_PATH}/glfw/include"
         "${LIBRARIES_PATH}/glm/include"
         "${LIBRARIES_PATH}/zlib"
@@ -25,10 +25,14 @@ include_directories(
 
 link_directories("${LIBRARIES_PATH}/glfw/lib-vc2022")
 link_directories("${LIBRARIES_PATH}/zlib/lib")
-link_directories("${LIBRARIES_PATH}/engine/lib")
+link_directories("${LIBRARIES_PATH}/freetype/lib")
 
 file(GLOB PROJECT_SRCS
         "include/*.h" "src/*.cpp"
+        )
+
+file(GLOB ENGINE_SRCS
+        "${LIBRARIES_PATH}/engine/include/*.h" "${LIBRARIES_PATH}/engine/src/*.cpp"
         )
 
 set(LIBRARIES_SRCS
@@ -36,7 +40,7 @@ set(LIBRARIES_SRCS
         "${GLAD_PATH}/src/glad.c"
         "${LIBRARIES_PATH}/b64/Base64.cpp")
 
-add_executable(${PROJECT_NAME} ${PROJECT_SRCS} ${LIBRARIES_SRCS} "${CMAKE_CURRENT_SOURCE_DIR}/resources.rc")
+add_executable(${PROJECT_NAME} ${PROJECT_SRCS} ${ENGINE_SRCS} ${LIBRARIES_SRCS} "${CMAKE_CURRENT_SOURCE_DIR}/resources.rc")
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
     set_target_properties(${PROJECT_NAME} PROPERTIES
@@ -44,11 +48,11 @@ if (CMAKE_BUILD_TYPE STREQUAL "Release")
 endif ()
 
 target_link_libraries(${PROJECT_NAME}
-        debug zlibstaticd
-        optimized zlibstatic)
+        debug freetyped
+        optimized freetype)
 
 target_link_libraries(${PROJECT_NAME}
-        debug engined
-        optimized engine)
+        debug zlibstaticd
+        optimized zlibstatic)
 
 target_link_libraries(${PROJECT_NAME} "glfw3" "opengl32")
