--- a/resources.rc
+++ b/resources.rc
@@ -14,11 +14,12 @@ data/shaders/quad.vert RCDATA "data/shaders/quad.vert"
 data/shaders/quad.frag RCDATA "data/shaders/quad.frag"
 data/shaders/glow.vert RCDATA "data/shaders/glow.vert"
 data/shaders/glow.frag RCDATA "data/shaders/glow.frag"
+data/shaders/text.vert RCDATA "data/shaders/text.vert"
+data/shaders/text.frag RCDATA "data/shaders/text.frag"
 
 data/examples/Adder4Bit.ls RCDATA "data/examples/Adder4Bit.ls"
 data/examples/Blocks.ls RCDATA "data/examples/Blocks.ls"
 data/examples/RAM1Byte.ls RCDATA "data/examples/RAM1Byte.ls"
 
 data/textures/favicon.png RCDATA "data/textures/favicon.png"
-
 data/textures/blocks.png RCDATA "data/textures/blocks.png"
