--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,4 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mwindows")
 
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS} ${ENGINE_SRCS} "${CMAKE_CURRENT_SOURCE_DIR}/resources.rc")
 
-target_link_libraries(${PROJECT_NAME} glfw3 opengl32 glad tb64 brotlicommon-static brotlidec-static brotlienc-static Ws2_32 imgui${_D} freetype${_D} bz2${_D} libpng16${_D} zlib${_D})
+target_link_libraries(${PROJECT_NAME} glfw3 glad tb64 brotlicommon-static brotlidec-static brotlienc-static Ws2_32 imgui${_D} freetype${_D} bz2${_D} libpng16${_D} zlib${_D})
