--- a/resources.rc
+++ b/resources.rc
@@ -1,4 +1,5 @@
-IDI_ICON1 ICON "data/favicon.ico"
+MAINICON ICON "data/favicon.ico"
+VERSION 2.0.7
 data/fonts/comfortaa.ttf RCDATA "data/fonts/comfortaa.ttf"
 
 data/shaders/background.vert RCDATA "data/shaders/background.vert"
@@ -12,9 +13,36 @@ data/shaders/final.frag RCDATA "data/shaders/final.frag"
 data/shaders/quad.vert RCDATA "data/shaders/quad.vert"
 data/shaders/quad.frag RCDATA "data/shaders/quad.frag"
 
-data/examples/Adder4Bit.ls RCDATA "data/examples/Adder4Bit.ls"
-data/examples/Blocks.ls RCDATA "data/examples/Blocks.ls"
-data/examples/RAM1Byte.ls RCDATA "data/examples/RAM1Byte.ls"
-
 data/textures/favicon.png RCDATA "data/textures/favicon.png"
 data/textures/blocks.png RCDATA "data/textures/blocks.png"
+
+1 VERSIONINFO
+ FILEVERSION 2,0,7
+ PRODUCTVERSION 2,0,7
+ FILEFLAGSMASK 0x17L
+#ifdef _DEBUG
+ FILEFLAGS 0x1L
+#else
+ FILEFLAGS 0x0L
+#endif
+ FILEOS 0x4L
+ FILETYPE 0x1L
+ FILESUBTYPE 0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "080904b0"
+        BEGIN
+            VALUE "CompanyName", "kewldan"
+            VALUE "FileVersion", "2.0.7"
+            VALUE "InternalName", "LogicalSystem"
+            VALUE "LegalCopyright", "2023 Tenishev Daniil"
+            VALUE "ProductName", "Logical System"
+            VALUE "ProductVersion", "2.0.7"
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x809, 1200
+    END
+END
